--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -14,7 +14,7 @@
 .joinInput {
     border-radius: 0;
     padding: 15px 20px;
-    width: 100%;
+    width: 85%;
 }
 
 .heading {
@@ -34,6 +34,7 @@
     display: inline-block;
     border: none;
     width: 100%;
+    outline: 0;
 }
 
 .mt-20 {
